work with maket, added readme.md

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
 
                 <div class="header__img">
-                    <img src="/img/header_img/header_women-img.png" alt="women-image">
+                    <img src="./img/header_img/header_women-img.png" alt="women-image">
                 </div>
 
             </div>
@@ -65,15 +65,15 @@
 
                         <div class="slider">
                             <div class="owl-carousel">
-                                <img class="slider__item" src="/img/slider_galery/01.jpg" alt="Slider item 01">
-                                <img class="slider__item" src="/img/slider_galery/02.jpg" alt="Slider item 01">
-                                <img class="slider__item" src="/img/slider_galery/03.jpg" alt="Slider item 01">
+                                <img class="slider__item" src="./img/slider_galery/01.jpg" alt="Slider item 01">
+                                <img class="slider__item" src="./img/slider_galery/02.jpg" alt="Slider item 01">
+                                <img class="slider__item" src="./img/slider_galery/03.jpg" alt="Slider item 01">
                             </div>
                             <button class="slider__button slider__button--back">
-                                <img src="/img/slider_galery/arrow-left.svg" alt="arrow-left">
+                                <img src="./img/slider_galery/arrow-left.svg" alt="arrow-left">
                             </button>
                             <button class="slider__button slider__button--next">
-                                <img src="/img/slider_galery/arrow-right.svg" alt="arrow-right">
+                                <img src="./img/slider_galery/arrow-right.svg" alt="arrow-right">
                             </button>
                         </div>
 
@@ -81,7 +81,80 @@
                 </div>
             </div>
         </section>
+        <section class="customers">
+            <div class="container">
+                <div class="customers__row">
+                    <div class="customers__img">
+                        <img src="./img/customers/customers.jpg" alt="Customer">
+                    </div>
+                    <div class="customers__content">
+                        <h2 class="customers__title">What do customers say about us?</h2>
+                        <div class="customers__review">
+                            <div class="review__client">
+                                <div class="review__client-avatar">
+                                    <img src="./img/customers/user-avatar.png" alt="user-avatar">
+                                </div>
+                                <div class="review__client-description">
+                                    <h3 class="review__client-description-name">Alpanasap</h3>
+                                    <p class="review__client-description-country">Japung, Indonesia</p>
+                                </div>
+                            </div>
+                            <div class="review__text">
+                                <p>Very satisfying service makes it comfortable, a beautiful place in the world.</p>
+                            </div>
+                            <div class="review__rating">
+                                <img src="./img/customers/stars-rating.svg" alt="rating">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="getstarted">
+            <div class="container">
+                <div class="getstarted__wrapper">
+                    <h2 class="getstarted__title">Prepare Yourself And <br> Start Exploring With Us.</h2>
+                    <div class="getstarted__text">
+                        <p>There's the best discount for you today.</p>
+                    </div>
+                    <a href="#" class="getstarted__button button-univers">Get Started</a>
+                </div>
+            </div>
+        </section>
+        <section class="subscribe">
+            <div class="container">
+                <div class="subscribe__wrapper">
+                    <h2 class="subscribe__title">Subscribe <br> To Our Newsletter</h2>
+                    <div class="subscribe__form">
+                        <form action="#">
+                            <input type="email" class="subscribe__input" required placeholder="Yourmail@mail.com">
+                            <button type="submit" class="subscribe__button">Subscribe</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+
+    <footer class="footer">
+        <div class="container">
+            <nav class="nav">
+                <div class="nav__logo">
+                    <h2 class="logo logo-footer"><a href="#">GoTrip</a></h2>
+                </div>
+                <ul class="nav__list nav__list-footer">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Pricing</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+                <ul class="nav__login nav__login-footer">
+                    <li><a href="#">Sign up</a></li>
+                    <li><a class="button button-footer" href="#">Login</a></li>
+                </ul>
+            </nav>
+        </div>
+    </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
